# ai

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS
examples/agents/: claude-mcp-server
examples/aws-mcp-server/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
examples/brave-search-mcp-server/: README.md  package.json  pnpm-lock.yaml  wrangler.jsonc
examples/express-mcp-server/: README.md  package-lock.json  package.json  pnpm-lock.yaml
examples/express-netlify-mcp-server/: README.md
examples/express-outbound-app-mcp-server/: package-lock.json  package.json  vercel.json
examples/express-vercel-mcp-server/: .env  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vercel.json
examples/fastapi-mcp-server/: .env.example  .gitignore  README.md  requirements.txt
examples/fastapi-mcp-w-outbound/: README.md  requirements.txt
examples/fastmcp-server/: .dockerignore  .env.example  DescopeOAuthProvider.py  Dockerfile  README.md  client-descope.py  example_outbound_apps.py  index.html  makefile  mcp-llama-stack-descope.py  mcpserver.py  pyproject.toml  requirements.txt  server.py
examples/java-spring-mcp/: App.java  README.md  dependency-reduced-pom.xml  env.example  pom.xml  setup-env.sh  start-server.sh
examples/mcp-server-cloudrun/: .dockerignore  .env.example  .env.yaml.example  .gitignore  README.md  ref.py  (+4 more)
hooks/: .gitignore  README.md  install-claude-code.sh  install.sh
rules/: descope-react.copilot-instructions.md
(+199 files in other folders)
