[project]
name = "fastmcp-descope"
version = "0.1.0"
description = "FastMCP server with Descope as the OAuth Provider"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.11.0",
    "aiohttp>=3.12.13",
    "python-dotenv>=1.1.1",
    "fastapi>=0.116.1",
    "starlette>=0.47.1",
    "mcpauth>=0.1.1",
    "certifi>=2024.2.2",
    "PyJWT>=2.8.0",
]
